@@ -2,6 +2,7 @@ package net.sourceforge.myfaces.component.html.ext;
 
 import javax.faces.component.EditableValueHolder;
 import javax.faces.component.UIComponent;
+import javax.faces.component.UIData;
 import javax.faces.context.FacesContext;
 import javax.faces.el.ValueBinding;
 import javax.faces.model.*;
@@ -9,6 +10,7 @@ import javax.servlet.jsp.jstl.sql.Result;
 import java.io.Serializable;
 import java.sql.ResultSet;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 
@@ -19,10 +21,11 @@ import java.util.List;
  * @author Manfred Geiler (latest modification by $Author$)
  * @version $Revision$ $Date$
  */
-class HtmlDataTableHack
+abstract class HtmlDataTableHack
         extends javax.faces.component.html.HtmlDataTable
 {
-    protected DataModel _dataModel;
+    protected DataModel _dataModel = null;
+    protected HashMap _dataModelMap = null;
 
     //init to false, so that no descendant states are saved for a newly created UIData
     transient protected boolean _saveDescendantStates = false;
@@ -38,6 +41,9 @@ class HtmlDataTableHack
     private int _rowIndex = -1;
     private Object[] _descendantStates;
     private int _descendantEditableValueHolderCount = -1;
+
+    private Boolean _isEmbeddedUIData = null;
+    private UIData _embeddingUIData = null;
 
 
     public boolean isRowAvailable()
@@ -302,44 +308,110 @@ class HtmlDataTableHack
     }
 
 
-
-
-
     private DataModel getDataModel()
     {
-        if (_dataModel == null)
+        UIData embeddingUIData = getEmbeddingUIData();
+        if (embeddingUIData != null)
         {
-            Object value = getValue();
-            if (value == null)
+            //This UIData is nested in another UIData, so we must not
+            //do simple caching of the current DataModel. We must associate
+            //the DataModel that we want to cache with the clientId of the
+            //embedding UIData. This clientId will be different for every
+            //row of the embedding UIData.
+            if (_dataModelMap == null)
             {
-                _dataModel = EMPTY_DATA_MODEL;
+                _dataModelMap = new HashMap();
             }
-            else if (value instanceof DataModel)
+            String embeddingClientId = embeddingUIData.getClientId(FacesContext.getCurrentInstance());
+            DataModel dataModel = (DataModel) _dataModelMap.get(embeddingClientId);
+            if (dataModel == null)
             {
-                _dataModel = (DataModel)value;
+                dataModel = createDataModel();
+                _dataModelMap.put(embeddingClientId, dataModel);
             }
-            else if (value instanceof List)
+            return dataModel;
+        }
+        else
+        {
+            //This UIData is not nested within another UIData. So there
+            //is no need for the DataModel Map.
+            if (_dataModel == null)
             {
-                _dataModel = new ListDataModel((List)value);
+                _dataModel = createDataModel();
             }
-            else if (OBJECT_ARRAY_CLASS.isAssignableFrom(value.getClass()))
+            return _dataModel;
+        }
+    }
+
+    /**
+     * Creates a new DataModel around the current value.
+     */
+    private DataModel createDataModel()
+    {
+        Object value = getValue();
+        if (value == null)
+        {
+            return EMPTY_DATA_MODEL;
+        }
+        else if (value instanceof DataModel)
+        {
+            return (DataModel)value;
+        }
+        else if (value instanceof List)
+        {
+            return new ListDataModel((List)value);
+        }
+        else if (OBJECT_ARRAY_CLASS.isAssignableFrom(value.getClass()))
+        {
+            return new ArrayDataModel((Object[])value);
+        }
+        else if (value instanceof ResultSet)
+        {
+            return new ResultSetDataModel((ResultSet)value);
+        }
+        else if (value instanceof Result)
+        {
+            return new ResultDataModel((Result)value);
+        }
+        else
+        {
+            return new ScalarDataModel(value);
+        }
+    }
+
+    /**
+     * Looks for an embedding UIData component
+     * @return the embedding UIData or null
+     */
+    private UIData getEmbeddingUIData()
+    {
+        if (_isEmbeddedUIData == null)
+        {
+            UIComponent findParentUIData = getParent();
+            while (findParentUIData != null &&
+                   !(findParentUIData instanceof UIData))
             {
-                _dataModel = new ArrayDataModel((Object[])value);
+                findParentUIData = findParentUIData.getParent();
             }
-            else if (value instanceof ResultSet)
+            if (findParentUIData != null)
             {
-                _dataModel = new ResultSetDataModel((ResultSet)value);
-            }
-            else if (value instanceof Result)
-            {
-                _dataModel = new ResultDataModel((Result)value);
+                _embeddingUIData = (UIData)findParentUIData;
+                _isEmbeddedUIData = Boolean.TRUE;
             }
             else
             {
-                _dataModel = new ScalarDataModel(value);
+                _isEmbeddedUIData = Boolean.FALSE;
             }
         }
-        return _dataModel;
+
+        if (_isEmbeddedUIData.booleanValue())
+        {
+            return _embeddingUIData;
+        }
+        else
+        {
+            return null;
+        }
     }
 
 
